fix: remove monitor startup diagnostics at their source and require native access in its entrypoint